# car_price_prediction

./: .gitignore  Quikr Analysis.ipynb  README.md  main.py  pyproject.toml  requirements.txt
template/: index.html
